Fixed extension class

--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,6 @@
         }
     },
     "extra": {
-        "extension-class" : "AnnotateCms\\Framework\\DI\\PackagesExtension"
+        "extension-class" : "AnnotateCms\\Packages\\DI\\PackagesExtension"
     }
 }
