--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         }
     ],
     "require": {
+        "php": ">=5.4",
         "nette/nette": "@dev",
         "annotatecms/installer": "@dev"
     },
