--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "require": {
         "php": ">=5.4",
         "nette/nette": "@dev",
-        "annotatecms/installer": "@dev"
+        "annotatecms/installer": "@dev",
+        "annotatecms/framework": "@dev"
     },
     "autoload": {
         "psr-4": {
@@ -21,6 +22,7 @@
         }
     },
     "extra": {
+        "config-dir": "app/config/",
         "extension-name": "packages",
         "extension-class": "AnnotateCms\\Packages\\DI\\PackagesExtension"
     }
