--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": ">=5.4",
-        "nette/nette": "2.1.*@dev",
+        "nette/nette": "v2.1.2",
         "annotatecms/installer": "@dev",
         "annotatecms/framework": "@dev"
     },
