--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,9 @@
         "annotatecms/extensions-installer": "@dev",
         "annotatecms/framework": "@dev"
     },
+    "require-dev": {
+        "codeception/codeception": "@dev"
+    },
     "suggest": {
         "annotatecms/themes": "Reveal full power of packages with themes package"
     },
@@ -24,7 +27,6 @@
         }
     },
     "extra": {
-        "config-dir": "app/config/",
         "extension-name": "packages",
         "extension-class": "AnnotateCms\\Packages\\DI\\PackagesExtension"
     }
