--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ before_script:
   - composer self-update
   - composer install --no-interaction --prefer-source --dev
 
-script: "php vendor/bin/codecept run"
+script: php tests/lint.php src/ tests/AnnotateCmsTests/ && VERBOSE=true ./tests/run-tests.sh -s tests/AnnotateCmsTests/
