--- a/circle.yml
+++ b/circle.yml
@@ -1,7 +1,7 @@
 machine:
     php:
         version: 5.5.11
-tests:
+test:
   override:
     - php tests/lint.php src/ tests/AnnotateCmsTests/
     - VERBOSE=true
