--- a/tests/AnnotateCmsTests/Packages/data/config.neon
+++ b/tests/AnnotateCmsTests/Packages/data/config.neon
@@ -2,4 +2,5 @@ extensions:
     packages: AnnotateCms\Packages\DI\PackagesExtension
 
 packages:
-    directory: %appDir%/data/packages
+    directories:
+        - %appDir%/data/packages
