--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ before_script:
   - composer self-update
   - composer install --no-interaction --prefer-source --dev
 
-script: php tests/lint.php src/ tests/AnnotateCmsTests/ && VERBOSE=true ./tests/run-tests.sh -s tests/AnnotateCmsTests/ -p php
+script: php tests/lint.php src/ tests/AnnotateTests/ && VERBOSE=true ./tests/run-tests.sh -s tests/AnnotateTests/ -p php
